Add dist folder

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Website that shows the beauty of diverse Tanzania National Parks, from Ngorongoro, Serengeti, to Manyara, Mikumi and so much more. Welcome and Enjoy!",
   "main": "app.js",
   "scripts": {
-    "deploy": "gh-pages -d safari"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
